--- a/eks-manifests/mysql-configmap.yml
+++ b/eks-manifests/mysql-configmap.yml
@@ -1,9 +1,16 @@
 apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: mysql-initdb-config
 data:
   init.sql: |
     CREATE DATABASE IF NOT EXISTS mydb;
     USE mydb;
     CREATE TABLE messages (id INT AUTO_INCREMENT PRIMARY KEY, message TEXT);
+kind: ConfigMap
+metadata:
+  annotations:
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"v1","data":{"init.sql":"CREATE DATABASE IF NOT EXISTS mydb;\nUSE mydb;\nCREATE TABLE messages (id INT AUTO_INCREMENT PRIMARY KEY, message TEXT);\n"},"kind":"ConfigMap","metadata":{"annotations":{},"name":"mysql-initdb-config","namespace":"default"}}
+  creationTimestamp: "2025-11-16T12:56:28Z"
+  name: mysql-initdb-config
+  namespace: default
+  resourceVersion: "19614"
+  uid: 89a99f02-4934-4b9f-b7a0-cc59cefa68cf
