--- a/eks-manifests/mysql-deployment.yml
+++ b/eks-manifests/mysql-deployment.yml
@@ -1,40 +1,86 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql
+  annotations:
+    deployment.kubernetes.io/revision: "1"
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"mysql"},"name":"mysql","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mysql"}},"template":{"metadata":{"labels":{"app":"mysql"}},"spec":{"containers":[{"env":[{"name":"MYSQL_ROOT_PASSWORD","valueFrom":{"secretKeyRef":{"key":"MYSQL_ROOT_PASSWORD","name":"mysql-secret"}}},{"name":"MYSQL_DATABASE","value":"mydb"},{"name":"MYSQL_USER","value":"admin"},{"name":"MYSQL_PASSWORD","value":"admin"}],"image":"mysql:latest","name":"mysql","ports":[{"containerPort":3306}],"volumeMounts":[{"mountPath":"docker-entrypoint-initdb.d","name":"mysql-initdb"}]}],"volumes":[{"configMap":{"name":"mysql-initdb-config"},"name":"mysql-initdb"}]}}}}
+  creationTimestamp: "2025-11-16T12:56:30Z"
+  generation: 1
   labels:
     app: mysql
+  name: mysql
+  namespace: default
+  resourceVersion: "19695"
+  uid: 2731bd50-edf2-49cf-b6fb-6910ba7f8dbf
 spec:
+  progressDeadlineSeconds: 600
   replicas: 1
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: mysql
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: mysql
     spec:
       containers:
-        - name: mysql
-          image: mysql:latest
-          env:
-            - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-secret
-                  key: MYSQL_ROOT_PASSWORD
-            - name: MYSQL_DATABASE
-              value: "mydb"
-            - name: MYSQL_USER
-              value: "admin"
-            - name: MYSQL_PASSWORD
-              value: "admin"
-          ports:
-            - containerPort: 3306
-          volumeMounts:
-            - name: mysql-initdb
-              mountPath: docker-entrypoint-initdb.d
+      - env:
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: MYSQL_ROOT_PASSWORD
+              name: mysql-secret
+        - name: MYSQL_DATABASE
+          value: mydb
+        - name: MYSQL_USER
+          value: admin
+        - name: MYSQL_PASSWORD
+          value: admin
+        image: mysql:latest
+        imagePullPolicy: Always
+        name: mysql
+        ports:
+        - containerPort: 3306
+          protocol: TCP
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: docker-entrypoint-initdb.d
+          name: mysql-initdb
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
       volumes:
-        - name: mysql-initdb
-          configMap:
-            name: mysql-initdb-config    # Config name
+      - configMap:
+          defaultMode: 420
+          name: mysql-initdb-config
+        name: mysql-initdb
+status:
+  availableReplicas: 1
+  conditions:
+  - lastTransitionTime: "2025-11-16T12:56:48Z"
+    lastUpdateTime: "2025-11-16T12:56:48Z"
+    message: Deployment has minimum availability.
+    reason: MinimumReplicasAvailable
+    status: "True"
+    type: Available
+  - lastTransitionTime: "2025-11-16T12:56:30Z"
+    lastUpdateTime: "2025-11-16T12:56:48Z"
+    message: ReplicaSet "mysql-5d56b4b848" has successfully progressed.
+    reason: NewReplicaSetAvailable
+    status: "True"
+    type: Progressing
+  observedGeneration: 1
+  readyReplicas: 1
+  replicas: 1
+  updatedReplicas: 1
