--- a/eks-manifests/mysql-secrets.yml
+++ b/eks-manifests/mysql-secrets.yml
@@ -1,7 +1,14 @@
 apiVersion: v1
-kind: Secret
-metadata:
-  name: mysql-secret
-type: Opaque
 data:
   MYSQL_ROOT_PASSWORD: YWRtaW4=
+kind: Secret
+metadata:
+  annotations:
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"v1","data":{"MYSQL_ROOT_PASSWORD":"YWRtaW4="},"kind":"Secret","metadata":{"annotations":{},"name":"mysql-secret","namespace":"default"},"type":"Opaque"}
+  creationTimestamp: "2025-11-16T12:56:27Z"
+  name: mysql-secret
+  namespace: default
+  resourceVersion: "19611"
+  uid: 325ca241-88f4-4761-ba00-eda7693cc606
+type: Opaque
