--- a/eks-manifests/mysql-svc.yml
+++ b/eks-manifests/mysql-svc.yml
@@ -1,10 +1,29 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mysql","namespace":"default"},"spec":{"ports":[{"port":3306,"targetPort":3306}],"selector":{"app":"mysql"}}}
+  creationTimestamp: "2025-11-16T12:56:32Z"
   name: mysql
+  namespace: default
+  resourceVersion: "19643"
+  uid: 21197106-f03f-4a22-94de-9233bd3b6dcd
 spec:
+  clusterIP: 172.20.250.90
+  clusterIPs:
+  - 172.20.250.90
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+  - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+  - port: 3306
+    protocol: TCP
+    targetPort: 3306
   selector:
     app: mysql
-  ports:
-    - port: 3306
-      targetPort: 3306
+  sessionAffinity: None
+  type: ClusterIP
+status:
+  loadBalancer: {}
