--- a/eks-manifests/two-tier-app-deployment.yml
+++ b/eks-manifests/two-tier-app-deployment.yml
@@ -1,31 +1,75 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: two-tier-app
+  annotations:
+    deployment.kubernetes.io/revision: "1"
+    kubectl.kubernetes.io/last-applied-configuration: |
+      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"two-tier-app"},"name":"two-tier-app","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"two-tier-app"}},"template":{"metadata":{"labels":{"app":"two-tier-app"}},"spec":{"containers":[{"env":[{"name":"MYSQL_HOST","value":"mysql"},{"name":"MYSQL_PASSWORD","value":"admin"},{"name":"MYSQL_USER","value":"root"},{"name":"MYSQL_DB","value":"mydb"}],"image":"trainwithshubham/flaskapp:latest","imagePullPolicy":"Always","name":"two-tier-app","ports":[{"containerPort":5000}]}]}}}}
+  creationTimestamp: "2025-11-16T12:57:38Z"
+  generation: 1
   labels:
     app: two-tier-app
+  name: two-tier-app
+  namespace: default
+  resourceVersion: "19901"
+  uid: 086a6715-d6cc-4d87-8022-0a236680b6cf
 spec:
+  progressDeadlineSeconds: 600
   replicas: 1
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: two-tier-app
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: two-tier-app
     spec:
       containers:
-        - name: two-tier-app
-          image: trainwithshubham/flaskapp:latest
-          env:
-            - name: MYSQL_HOST
-              value: mysql          # this is your mysql's service clusture IP, Make sure to change it with yours
-            - name: MYSQL_PASSWORD
-              value: "admin"
-            - name: MYSQL_USER
-              value: "root"
-            - name: MYSQL_DB
-              value: "mydb"
-          ports:
-            - containerPort: 5000
-          imagePullPolicy: Always
+      - env:
+        - name: MYSQL_HOST
+          value: mysql
+        - name: MYSQL_PASSWORD
+          value: admin
+        - name: MYSQL_USER
+          value: root
+        - name: MYSQL_DB
+          value: mydb
+        image: trainwithshubham/flaskapp:latest
+        imagePullPolicy: Always
+        name: two-tier-app
+        ports:
+        - containerPort: 5000
+          protocol: TCP
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
+status:
+  availableReplicas: 1
+  conditions:
+  - lastTransitionTime: "2025-11-16T12:57:51Z"
+    lastUpdateTime: "2025-11-16T12:57:51Z"
+    message: Deployment has minimum availability.
+    reason: MinimumReplicasAvailable
+    status: "True"
+    type: Available
+  - lastTransitionTime: "2025-11-16T12:57:38Z"
+    lastUpdateTime: "2025-11-16T12:57:51Z"
+    message: ReplicaSet "two-tier-app-6d6ddddffd" has successfully progressed.
+    reason: NewReplicaSetAvailable
+    status: "True"
+    type: Progressing
+  observedGeneration: 1
+  readyReplicas: 1
+  replicas: 1
+  updatedReplicas: 1
